Add Sound for Flipping boxes in Minesweeper Game

--- a/PowerUp/app/src/main/AndroidManifest.xml
+++ b/PowerUp/app/src/main/AndroidManifest.xml
@@ -121,6 +121,7 @@
             android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
+        <service android:name=".minesweeper.MinesweeperSound"/>
     </application>
 
 </manifest>
